[package]
name = "medium-to-markdown"
version = "0.1.2"
edition = "2021"
authors = ["Harshil-Jani <harshiljani2002@gmail.com>"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
description = "A tool to parse medium blogs to markdown files"
readme = "README.md"
homepage = "https://github.com/Harshil-Jani/medium-to-markdown"
repository = "https://github.com/Harshil-Jani/medium-to-markdown"
keywords = ["cli", "parser", "blog", "medium"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
html_parser = "0.7.0"
